// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createGreetingMessage() 1`] = `
Object {
  "altText": "This is a chatbot that looks up suspicious forwarded messages for you. Here is how to use me:",
  "contents": Object {
    "contents": Array [
      Object {
        "body": Object {
          "contents": Array [
            Object {
              "aspectMode": "cover",
              "aspectRatio": "1:1",
              "gravity": "top",
              "size": "full",
              "type": "image",
              "url": "https://testlinebot.cofacts/static/img/greeting.png?cachebust=20201105",
            },
            Object {
              "contents": Array [
                Object {
                  "size": "lg",
                  "text": "This is a chatbot that looks up suspicious forwarded messages for you. Here is how to use me:",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "flex": 1,
              "justifyContent": "center",
              "layout": "vertical",
              "offsetBottom": "0px",
              "offsetEnd": "0px",
              "offsetStart": "0px",
              "paddingAll": "20px",
              "paddingTop": "18px",
              "position": "relative",
              "type": "box",
            },
          ],
          "layout": "vertical",
          "paddingAll": "0px",
          "type": "box",
        },
        "type": "bubble",
      },
    ],
    "type": "carousel",
  },
  "type": "flex",
}
`;

exports[`createTutorialMessage() 1`] = `
Object {
  "altText": "1. When receiving a message from elsewhere
2. Long press and share
3. Select Cofacts to share
4. Cofacts replies with a crowd-sourced fact-check or chatbot replies",
  "contents": Object {
    "contents": Array [
      Object {
        "body": Object {
          "contents": Array [
            Object {
              "aspectMode": "cover",
              "aspectRatio": "1:1",
              "gravity": "top",
              "size": "full",
              "type": "image",
              "url": "https://testlinebot.cofacts/static/img/tutorial1.png?cachebust=20201105",
            },
            Object {
              "contents": Array [
                Object {
                  "size": "lg",
                  "text": "1. When receiving a message from elsewhere",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "flex": 1,
              "justifyContent": "center",
              "layout": "vertical",
              "offsetBottom": "0px",
              "offsetEnd": "0px",
              "offsetStart": "0px",
              "paddingAll": "20px",
              "paddingTop": "18px",
              "position": "relative",
              "type": "box",
            },
          ],
          "layout": "vertical",
          "paddingAll": "0px",
          "type": "box",
        },
        "type": "bubble",
      },
      Object {
        "body": Object {
          "contents": Array [
            Object {
              "aspectMode": "cover",
              "aspectRatio": "1:1",
              "gravity": "top",
              "size": "full",
              "type": "image",
              "url": "https://testlinebot.cofacts/static/img/tutorial2.png?cachebust=20201105",
            },
            Object {
              "contents": Array [
                Object {
                  "size": "lg",
                  "text": "2. Long press and share",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "flex": 1,
              "justifyContent": "center",
              "layout": "vertical",
              "offsetBottom": "0px",
              "offsetEnd": "0px",
              "offsetStart": "0px",
              "paddingAll": "20px",
              "paddingTop": "18px",
              "position": "relative",
              "type": "box",
            },
          ],
          "layout": "vertical",
          "paddingAll": "0px",
          "type": "box",
        },
        "type": "bubble",
      },
      Object {
        "body": Object {
          "contents": Array [
            Object {
              "aspectMode": "cover",
              "aspectRatio": "1:1",
              "gravity": "top",
              "size": "full",
              "type": "image",
              "url": "https://testlinebot.cofacts/static/img/tutorial3.png?cachebust=20201105",
            },
            Object {
              "contents": Array [
                Object {
                  "size": "lg",
                  "text": "3. Select Cofacts to share",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "flex": 1,
              "justifyContent": "center",
              "layout": "vertical",
              "offsetBottom": "0px",
              "offsetEnd": "0px",
              "offsetStart": "0px",
              "paddingAll": "20px",
              "paddingTop": "18px",
              "position": "relative",
              "type": "box",
            },
          ],
          "layout": "vertical",
          "paddingAll": "0px",
          "type": "box",
        },
        "type": "bubble",
      },
      Object {
        "body": Object {
          "contents": Array [
            Object {
              "aspectMode": "cover",
              "aspectRatio": "1:1",
              "gravity": "top",
              "size": "full",
              "type": "image",
              "url": "https://testlinebot.cofacts/static/img/tutorial4.png?cachebust=20201105",
            },
            Object {
              "contents": Array [
                Object {
                  "size": "lg",
                  "text": "4. Cofacts replies with a crowd-sourced fact-check or chatbot replies",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "flex": 1,
              "justifyContent": "center",
              "layout": "vertical",
              "offsetBottom": "0px",
              "offsetEnd": "0px",
              "offsetStart": "0px",
              "paddingAll": "20px",
              "paddingTop": "18px",
              "position": "relative",
              "type": "box",
            },
          ],
          "layout": "vertical",
          "paddingAll": "0px",
          "type": "box",
        },
        "type": "bubble",
      },
      Object {
        "body": Object {
          "contents": Array [
            Object {
              "size": "lg",
              "text": "Wanna try it out? Just forward a message to me!",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "data": "{\\"input\\":\\"Simulates forwarding a message\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
                "displayText": "只要每天早上一杯地瓜葉牛奶。不僅有效降低三高，甚至連痛風也沒了；此外，地瓜葉牛奶的作法也很簡單，只要先將地瓜葉川燙過後，再加入鮮奶打成汁即可。",
                "label": "Simulates forwarding a message",
                "type": "postback",
              },
              "color": "#ffb600",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "horizontal",
          "type": "box",
        },
        "type": "bubble",
      },
    ],
    "type": "carousel",
  },
  "type": "flex",
}
`;

exports[`should handle EXPLAN_CHATBOT_FLOW_AND_PROVIDE_PERMISSION_SETUP 1`] = `
Object {
  "data": Object {
    "searchedText": "",
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "text": "⬆️ What you see above is a simulation of what you may see after you forward a message to Cofacts.

📚 Cofacts has a database of hoax messages and replies.

📲 When you send a message to me, I look up the message in our database and return the results I found.

🆕 If I can't find anything, I will ask you about sending your message to that database.",
      "type": "text",
    },
    Object {
      "altText": "To wrap up, please finish your permission settings so that I can provide a smoother experience.",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "contents": Array [
                Object {
                  "text": "To wrap up, please finish your permission settings so that I can provide a smoother experience.",
                  "type": "span",
                },
              ],
              "flex": 0,
              "gravity": "top",
              "type": "text",
              "weight": "regular",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "margin": "none",
          "spacing": "none",
          "type": "box",
        },
        "direction": "ltr",
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "label": "Setup permission",
                "type": "uri",
                "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=setting&utm_source=rumors-line-bot&utm_medium=tutorial",
              },
              "color": "#ffb600",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "horizontal",
          "type": "box",
        },
        "type": "bubble",
      },
      "quickReply": Object {
        "items": Array [
          Object {
            "action": Object {
              "data": "{\\"input\\":\\"👌 Done!\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
              "displayText": "👌 Done!",
              "label": "👌 Done!",
              "type": "postback",
            },
            "type": "action",
          },
          Object {
            "action": Object {
              "data": "{\\"input\\":\\"⏱️ Later\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
              "displayText": "⏱️ Later",
              "label": "⏱️ Later",
              "type": "postback",
            },
            "type": "action",
          },
          Object {
            "action": Object {
              "data": "{\\"input\\":\\"❓ Why\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
              "displayText": "❓ Why",
              "label": "❓ Why",
              "type": "postback",
            },
            "type": "action",
          },
        ],
      },
      "type": "flex",
    },
  ],
}
`;

exports[`should handle PROVIDE_PERMISSION_SETUP 1`] = `
Object {
  "data": Object {
    "searchedText": "",
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "text": "You are smart 😊",
      "type": "text",
    },
    Object {
      "altText": "To wrap up, please finish your permission settings so that I can provide a smoother experience.",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "contents": Array [
                Object {
                  "text": "To wrap up, please finish your permission settings so that I can provide a smoother experience.",
                  "type": "span",
                },
              ],
              "flex": 0,
              "gravity": "top",
              "type": "text",
              "weight": "regular",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "margin": "none",
          "spacing": "none",
          "type": "box",
        },
        "direction": "ltr",
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "label": "Setup permission",
                "type": "uri",
                "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=setting&utm_source=rumors-line-bot&utm_medium=tutorial",
              },
              "color": "#ffb600",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "horizontal",
          "type": "box",
        },
        "type": "bubble",
      },
      "quickReply": Object {
        "items": Array [
          Object {
            "action": Object {
              "data": "{\\"input\\":\\"👌 Done!\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
              "displayText": "👌 Done!",
              "label": "👌 Done!",
              "type": "postback",
            },
            "type": "action",
          },
          Object {
            "action": Object {
              "data": "{\\"input\\":\\"⏱️ Later\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
              "displayText": "⏱️ Later",
              "label": "⏱️ Later",
              "type": "postback",
            },
            "type": "action",
          },
          Object {
            "action": Object {
              "data": "{\\"input\\":\\"❓ Why\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
              "displayText": "❓ Why",
              "label": "❓ Why",
              "type": "postback",
            },
            "type": "action",
          },
        ],
      },
      "type": "flex",
    },
  ],
}
`;

exports[`should handle PROVIDE_PERMISSION_SETUP_WITH_EXPLANATION 1`] = `
Object {
  "data": Object {
    "searchedText": "",
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "altText": "When I provide hoax-busting replies to you, I would like to ask you for any feedback on the crowd-sourced reply.
In order to achieve that, I need to ask for your permission to \\"Send messages to chats\\".
The permission will be used to send only this one message of yours back to this particular chatr⋯⋯",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "contents": Array [
                Object {
                  "text": "When I provide hoax-busting replies to you, I would like to ask you for any feedback on the crowd-sourced reply.
In order to achieve that, I need to ask for your permission to \\"Send messages to chats\\".
The permission will be used to send only this one message of yours back to this particular chatroom.
You can still use Cofacts without granting me this permission. When we ask for feedback from you, the permission dialog will pop-up again.",
                  "type": "span",
                },
              ],
              "flex": 0,
              "gravity": "top",
              "type": "text",
              "weight": "regular",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "margin": "none",
          "spacing": "none",
          "type": "box",
        },
        "direction": "ltr",
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "label": "Setup permission",
                "type": "uri",
                "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=setting&utm_source=rumors-line-bot&utm_medium=tutorial",
              },
              "color": "#ffb600",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "horizontal",
          "type": "box",
        },
        "type": "bubble",
      },
      "quickReply": Object {
        "items": Array [
          Object {
            "action": Object {
              "data": "{\\"input\\":\\"👌 Done!\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
              "displayText": "👌 Done!",
              "label": "👌 Done!",
              "type": "postback",
            },
            "type": "action",
          },
          Object {
            "action": Object {
              "data": "{\\"input\\":\\"⏱️ Later\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
              "displayText": "⏱️ Later",
              "label": "⏱️ Later",
              "type": "postback",
            },
            "type": "action",
          },
        ],
      },
      "type": "flex",
    },
  ],
}
`;

exports[`should handle RICH_MENU 1`] = `
Object {
  "data": Object {
    "searchedText": "",
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "altText": "1. When receiving a message from elsewhere
2. Long press and share
3. Select Cofacts to share
4. Cofacts replies with a crowd-sourced fact-check or chatbot replies",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "aspectMode": "cover",
                  "aspectRatio": "1:1",
                  "gravity": "top",
                  "size": "full",
                  "type": "image",
                  "url": "https://testlinebot.cofacts/static/img/tutorial1.png?cachebust=20201105",
                },
                Object {
                  "contents": Array [
                    Object {
                      "size": "lg",
                      "text": "1. When receiving a message from elsewhere",
                      "type": "text",
                      "weight": "bold",
                      "wrap": true,
                    },
                  ],
                  "flex": 1,
                  "justifyContent": "center",
                  "layout": "vertical",
                  "offsetBottom": "0px",
                  "offsetEnd": "0px",
                  "offsetStart": "0px",
                  "paddingAll": "20px",
                  "paddingTop": "18px",
                  "position": "relative",
                  "type": "box",
                },
              ],
              "layout": "vertical",
              "paddingAll": "0px",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "aspectMode": "cover",
                  "aspectRatio": "1:1",
                  "gravity": "top",
                  "size": "full",
                  "type": "image",
                  "url": "https://testlinebot.cofacts/static/img/tutorial2.png?cachebust=20201105",
                },
                Object {
                  "contents": Array [
                    Object {
                      "size": "lg",
                      "text": "2. Long press and share",
                      "type": "text",
                      "weight": "bold",
                      "wrap": true,
                    },
                  ],
                  "flex": 1,
                  "justifyContent": "center",
                  "layout": "vertical",
                  "offsetBottom": "0px",
                  "offsetEnd": "0px",
                  "offsetStart": "0px",
                  "paddingAll": "20px",
                  "paddingTop": "18px",
                  "position": "relative",
                  "type": "box",
                },
              ],
              "layout": "vertical",
              "paddingAll": "0px",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "aspectMode": "cover",
                  "aspectRatio": "1:1",
                  "gravity": "top",
                  "size": "full",
                  "type": "image",
                  "url": "https://testlinebot.cofacts/static/img/tutorial3.png?cachebust=20201105",
                },
                Object {
                  "contents": Array [
                    Object {
                      "size": "lg",
                      "text": "3. Select Cofacts to share",
                      "type": "text",
                      "weight": "bold",
                      "wrap": true,
                    },
                  ],
                  "flex": 1,
                  "justifyContent": "center",
                  "layout": "vertical",
                  "offsetBottom": "0px",
                  "offsetEnd": "0px",
                  "offsetStart": "0px",
                  "paddingAll": "20px",
                  "paddingTop": "18px",
                  "position": "relative",
                  "type": "box",
                },
              ],
              "layout": "vertical",
              "paddingAll": "0px",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "aspectMode": "cover",
                  "aspectRatio": "1:1",
                  "gravity": "top",
                  "size": "full",
                  "type": "image",
                  "url": "https://testlinebot.cofacts/static/img/tutorial4.png?cachebust=20201105",
                },
                Object {
                  "contents": Array [
                    Object {
                      "size": "lg",
                      "text": "4. Cofacts replies with a crowd-sourced fact-check or chatbot replies",
                      "type": "text",
                      "weight": "bold",
                      "wrap": true,
                    },
                  ],
                  "flex": 1,
                  "justifyContent": "center",
                  "layout": "vertical",
                  "offsetBottom": "0px",
                  "offsetEnd": "0px",
                  "offsetStart": "0px",
                  "paddingAll": "20px",
                  "paddingTop": "18px",
                  "position": "relative",
                  "type": "box",
                },
              ],
              "layout": "vertical",
              "paddingAll": "0px",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "size": "lg",
                  "text": "Wanna try it out? Just forward a message to me!",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"Simulates forwarding a message\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
                    "displayText": "只要每天早上一杯地瓜葉牛奶。不僅有效降低三高，甚至連痛風也沒了；此外，地瓜葉牛奶的作法也很簡單，只要先將地瓜葉川燙過後，再加入鮮奶打成汁即可。",
                    "label": "Simulates forwarding a message",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`should handle SETUP_DONE 1`] = `
Object {
  "data": Object {
    "searchedText": "",
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "altText": "This is the end of the tutorial. Next time when you receive a suspicious message, don't hesitate to forward it to me! 🤗",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "aspectMode": "cover",
                  "aspectRatio": "1:1",
                  "gravity": "top",
                  "size": "full",
                  "type": "image",
                  "url": "https://testlinebot.cofacts/static/img/endoftutorial.png?cachebust=20201105",
                },
                Object {
                  "contents": Array [
                    Object {
                      "size": "lg",
                      "text": "This is the end of the tutorial. Next time when you receive a suspicious message, don't hesitate to forward it to me! 🤗",
                      "type": "text",
                      "weight": "bold",
                      "wrap": true,
                    },
                  ],
                  "flex": 1,
                  "justifyContent": "center",
                  "layout": "vertical",
                  "offsetBottom": "0px",
                  "offsetEnd": "0px",
                  "offsetStart": "0px",
                  "paddingAll": "20px",
                  "paddingTop": "18px",
                  "position": "relative",
                  "type": "box",
                },
              ],
              "layout": "vertical",
              "paddingAll": "0px",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`should handle SETUP_LATER 1`] = `
Object {
  "data": Object {
    "searchedText": "",
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "text": "OK. When we ask for feedback from you, the permission dialog will pop-up again.",
      "type": "text",
    },
    Object {
      "altText": "This is the end of the tutorial. Next time when you receive a suspicious message, don't hesitate to forward it to me! 🤗",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "aspectMode": "cover",
                  "aspectRatio": "1:1",
                  "gravity": "top",
                  "size": "full",
                  "type": "image",
                  "url": "https://testlinebot.cofacts/static/img/endoftutorial.png?cachebust=20201105",
                },
                Object {
                  "contents": Array [
                    Object {
                      "size": "lg",
                      "text": "This is the end of the tutorial. Next time when you receive a suspicious message, don't hesitate to forward it to me! 🤗",
                      "type": "text",
                      "weight": "bold",
                      "wrap": true,
                    },
                  ],
                  "flex": 1,
                  "justifyContent": "center",
                  "layout": "vertical",
                  "offsetBottom": "0px",
                  "offsetEnd": "0px",
                  "offsetStart": "0px",
                  "paddingAll": "20px",
                  "paddingTop": "18px",
                  "position": "relative",
                  "type": "box",
                },
              ],
              "layout": "vertical",
              "paddingAll": "0px",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`should handle SIMULATE_FORWARDING_MESSAGE 1`] = `
Object {
  "data": Object {
    "searchedText": "",
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "text": "💡 Someone on the internet replies to the message:",
      "type": "text",
    },
    Object {
      "text": "基本上地瓜葉其實單吃就有效果，牛奶、豆漿可加可不加，民眾不用迷信。 三高或是糖尿病的患者還是要搭配醫生的治療，不能單靠吃地瓜葉就想將身體調養好，民眾千萬要注意。
另外地瓜葉內還有鉀和鈉，對於有痛風或是腎臟不好的民眾反而會造成負擔，因此並不建議食用。",
      "type": "text",
    },
    Object {
      "text": "references：http://www.mygopen.com/2017/06/blog-post_26.html
神奇的地瓜葉？搭配鮮奶遠離三高？謠言讓醫生說：有痛風或是腎臟不好的人要小心！",
      "type": "text",
    },
    Object {
      "quickReply": Object {
        "items": Array [
          Object {
            "action": Object {
              "data": "{\\"input\\":\\"💡 Cool, I got it!\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
              "displayText": "💡 Cool, I got it!",
              "label": "💡 Cool, I got it!",
              "type": "postback",
            },
            "type": "action",
          },
          Object {
            "action": Object {
              "data": "{\\"input\\":\\"🤔 What happened?\\",\\"sessionId\\":1497994017447,\\"state\\":\\"TUTORIAL\\"}",
              "displayText": "🤔 What happened?",
              "label": "🤔 What happened?",
              "type": "postback",
            },
            "type": "action",
          },
        ],
      },
      "text": "⬆️ Therefore, the author think the message contains misinformation.

💁 This content is provided by Cofact message reporting chatbot and crowd-sourced fact-checking community under CC BY-SA 4.0 license. Please refer to their references and make judgements on your own.


⁉️ If you have different thoughts, you may have your say here:
https://dev.cofacts.tw/article/2sn80q5l5mzi0",
      "type": "text",
    },
  ],
}
`;
